<resources>
    <string name="app_name">Skat Board</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="icon_diamonds">&#x2666;</string>
    <string name="icon_hearts">&#x2665;</string>
    <string name="icon_spades">&#x2660;</string>
    <string name="icon_clubs">&#x2663;</string>
    <string name="icon_jacks">G</string>

    <string name="icon_player">&#xe9f9;</string>
    <string name="icon_player_lost">&#xe9ed;</string>
    <string name="icon_player_won">&#xe9e1;</string>

    <string name="additional_info_more">Ansagen &#x2795;</string>
    <string name="additional_info_less">&#x2796;</string>

    <string name="item">Player %d</string>

</resources>
