<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryPage$PlaceholderFragment"
    android:background="#d7ccc8"
    android:id="@+id/mainView">

    <android.support.v4.view.ViewPager
        android:id="@+id/playerPager"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GameArea"
        android:layout_below="@+id/playerPager"
        android:layout_above="@+id/pointsLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d7ccc8"
            android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/basicGameInfoView"
        >

        <View style="@style/DividerHorizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d7ccc8">

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ImageView
                    style="@style/EqualButton"
                    android:padding="0dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/numberJacks"
                    android:src="@mipmap/ic_number_jacks" />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/numberJacks1"
                    android:textOn="1"
                    android:textOff="1"
                    android:tag="numberJacksButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/numberJacks2"
                    android:textOn="2"
                    android:textOff="2"
                    android:tag="numberJacksButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/numberJacks3"
                    android:textOn="3"
                    android:textOff="3"
                    android:tag="numberJacksButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/numberJacks4"
                    android:textOn="4"
                    android:textOff="4"
                    android:tag="numberJacksButton"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d7ccc8">

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/valueSuitsDiamonds"
                    android:textOn="@string/icon_diamonds"
                    android:textOff="@string/icon_diamonds"
                    android:tag="gameValueButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/valueSuitsHearts"
                    android:textOn="@string/icon_hearts"
                    android:textOff="@string/icon_hearts"
                    android:tag="gameValueButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/valueSuitsSpades"
                    android:textOn="@string/icon_spades"
                    android:textOff="@string/icon_spades"
                    android:tag="gameValueButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:id="@+id/valueSuitsClubs"
                    android:textOn="@string/icon_clubs"
                    android:textOff="@string/icon_clubs"
                    android:tag="gameValueButton"
                    />
            </LinearLayout>

            <LinearLayout style="@style/HorizontallyEqualLayout" >
                <ToggleButton
                    style="@style/EqualButton"
                    android:scaleType="fitXY"
                    android:padding="0dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOn=""
                    android:textOff=""
                    android:id="@+id/valueGrand"
                    android:tag="gameValueButton"
                    android:background="@drawable/layer_list" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/DividerHorizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toggleAdditionalGameInfoView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_info_more"
            android:id="@+id/additional_info_more"
            style="@style/GameInfoToggle"
            />
    </LinearLayout>



        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="5"
            android:columnCount="3"
            android:id="@+id/additionalGameInfoView">

            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/additional_info_less"
                android:id="@+id/additional_info_less"
                style="@style/GameInfoToggle"
                />

            <TextView
                android:id="@+id/text1"
                android:layout_row="0"
                android:layout_column="1"
                android:text="Angesagt"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text1"
                android:layout_row="0"
                android:layout_column="2"
                android:text="Ergebnis"
                android:layout_gravity="center_vertical"
                android:paddingRight="16dp"
                />

            <TextView
                android:id="@+id/text1"
                android:layout_row="1"
                android:layout_column="0"
                android:text="Hand"
                style="@style/GameInfoText"
                />

            <CheckBox
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/checkBoxHand"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/GameInfoText"
                android:id="@+id/text1"
                android:layout_row="2"
                android:layout_column="0"
                android:text="Ouvert"
                />

            <CheckBox
                android:layout_row="2"
                android:layout_column="1"
                android:id="@+id/checkBoxOuvert"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/GameInfoText"
                android:id="@+id/text1"
                android:layout_row="3"
                android:layout_column="0"
                android:text="Schneider"
                />

            <CheckBox
                android:layout_row="3"
                android:layout_column="1"
                android:id="@+id/checkBoxSchneider"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_row="3"
                android:layout_column="2"
                android:id="@+id/checkBoxSchneiderAngesagt"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/GameInfoText"
                android:id="@+id/text1"
                android:layout_row="4"
                android:layout_column="0"
                android:text="Schwarz"
                />

            <CheckBox
                android:layout_row="4"
                android:layout_column="1"
                android:id="@+id/checkBoxSchwarz"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_row="4"
                android:layout_column="2"
                android:id="@+id/checkBoxSchwarzAngesagt"
                android:layout_gravity="center_horizontal"/>

        </GridLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/pointsLayout">

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPoints"
            android:hint="Punkte"
            android:layout_gravity="start"
            android:focusable="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speichern"
            android:id="@+id/buttonCompute"
            android:layout_gravity="end"/>
    </LinearLayout>

</RelativeLayout>
